--- a/src/global/main.css
+++ b/src/global/main.css
@@ -18,6 +18,7 @@ body{
     color:white;
     border-color: rgb(85, 85, 85);
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 :root {
     color-scheme: dark;
