--- a/src/global/main.css
+++ b/src/global/main.css
@@ -29,6 +29,13 @@ body{
 .card {
     margin-top: 10px;
 }
+.card-footer{
+    border-color: rgb(85, 85, 85);
+}
+.card-footer > .btn{
+    margin-left: 10px;
+    float:right;
+}
 label{
     margin-top: 10px;    
 }
